did activation email

--- a/FRONT/CSS/style.css
+++ b/FRONT/CSS/style.css
@@ -42,7 +42,7 @@ header li {
 
 section {
 	height: 90vh;
-	background-image: url("");
+	background-image: url("https://i.pinimg.com/originals/9a/a0/1a/9aa01a4a6f8e59541b350a0fd600f5e2.gif");
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center;
