front js all listings done

--- a/FRONT/CSS/user.css
+++ b/FRONT/CSS/user.css
@@ -6,7 +6,10 @@ main {
 	min-height: 80vh;
 	max-height: fit-content;
 	display: flex;
+	flex-direction: column;
 	justify-content: center;
+	align-items: center;
+	gap: 50px;
 	padding: 50px 0;
 }
 
